<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/textView_Header_Food_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/header_food_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView_Header_Food_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/header_food_Description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:importantForAutofill="no"
        android:ems="8"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/textView_Header_Food_Ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/header_food_Ingredients"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:importantForAutofill="no"
        android:ems="8"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/textView_Header_Food_Calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/header_food_Caloriess"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:importantForAutofill="no"
        android:ems="8"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/textView_Header_Food_Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/header_food_Link"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFoodLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:importantForAutofill="no"
        android:ems="8"
        android:inputType="text"
        />

    <Button
        android:id="@+id/button_add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="launchFoodChooserActivity"
        android:text="@string/add_food" />

</android.support.v7.widget.LinearLayoutCompat>